# DeadEyeShot_ESPIDF

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  UPDATES.md  sdkconfig.defaults
.claude/: settings.local.json
main/: CMakeLists.txt  Kconfig.projbuild  ble_service.cpp  ble_service.h  camera_driver.c  camera_driver.h  idf_component.yml  main.c  scorer.c  scorer.h  target_detector.c  target_detector.h  trigger.c  trigger.h  web_server.c  web_server.h  wifi_station.c  wifi_station.h
