idf_component_register(SRCS "main.c"
                        "camera_driver.c"
                        "target_detector.c"
                        "trigger.c"
                        "ble_service.cpp"
                        "wifi_station.c"
                        "web_server.c"
                    INCLUDE_DIRS ".")
